test/fail/if-no-cons.rnp
if true { 1 }
---
 --> fail/if-no-cons.rnp:1:1
  |
1 | if true { 1 }
  | ^^^^^^^^^^^^^ If expression with consequent value must have alternative
  |
